# esp32-thinkink-epaper-slidshow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app_config.yml
components/Adafruit_BusIO_ESPIDF/: Adafruit_I2CDevice.cpp  Adafruit_I2CDevice.h  Adafruit_SPIDevice.cpp  Adafruit_SPIDevice.h  Arduino.h  CMakeLists.txt  Print.h  SPI.cpp  SPI.h  Serial.h  Wire.cpp  Wire.h  arduino_compat.cpp
components/Adafruit_EPD/: CMakeLists.txt  SPI.h
components/Adafruit_EPD/src/: Adafruit_EPD.h
components/Adafruit_EPD/src/drivers/: Adafruit_ACeP.cpp  Adafruit_ACeP.h  Adafruit_EK79686.cpp  Adafruit_EK79686.h  Adafruit_IL0373.cpp  Adafruit_IL0373.h  Adafruit_IL0398.cpp  Adafruit_IL0398.h  Adafruit_IL91874.cpp  Adafruit_IL91874.h  Adafruit_JD79661.cpp  Adafruit_JD79661.h  Adafruit_JD79667.cpp  Adafruit_JD79667.h  Adafruit_SSD1608.cpp  Adafruit_SSD1608.h  Adafruit_SSD1619.cpp  Adafruit_SSD1619.h  Adafruit_SSD1675.cpp  Adafruit_SSD1675.h  Adafruit_SSD1675B.cpp  Adafruit_SSD1675B.h  Adafruit_SSD1680.cpp  Adafruit_SSD1680.h  Adafruit_SSD1681.cpp  Adafruit_SSD1681.h  Adafruit_SSD1683.cpp  Adafruit_SSD1683.h  Adafruit_UC8151D.cpp  Adafruit_UC8151D.h  Adafruit_UC8179.cpp  Adafruit_UC8179.h  Adafruit_UC8253.cpp  Adafruit_UC8253.h  Adafruit_UC8276.cpp  Adafruit_UC8276.h
components/Adafruit_EPD/src/panels/: ThinkInk_270_Grayscale4_W3.h  ThinkInk_420_Grayscale4_T2.h  ThinkInk_420_Mono_M06.h  ThinkInk_420_Tricolor_Z21.h  ThinkInk_583_Mono_AAAMFGN.h  ThinkInk_583_Tricolor_AABMFGNR.h  ThinkInk_750_Mono_AAAMFGN.h  ThinkInk_750_Tricolor_AABMFGNR.h
components/Adafruit_GFX/: Adafruit_GFX.h  Adafruit_GrayOLED.h  Adafruit_SPITFT.cpp  Arduino.h  CMakeLists.txt  Print.h  WProgram.h  Wire.h  pgmspace.h
components/Adafruit_SH1106_ESPIDF/: Adafruit_SH1106.cpp  Adafruit_SH1106.h  CMakeLists.txt
docs/: ARCHITECTURE.md  HARDWARE_SETUP.md  IMAGE_FORMAT.md  SLIDESHOW_PLAN.md
main/: CMakeLists.txt  button.cpp  button.hpp  config.hpp  image_loader.cpp  image_loader.hpp  main.cpp  sd_card.cpp  sd_card.hpp  slideshow.cpp  slideshow.hpp
